# count-fasta-rs

./: .gitignore  .goreleaser.yaml  Cargo.toml  NOTICE  README.md  artifacts.json  changelog.rss  count-fasta-rs-installer.ps1.txt  count-fasta-rs-installer.sh.txt  dist-workspace.toml  index.html  oranda.json
.agent/workflows/: benchmark_hyperfine.md  profile_samply.md  rust_check.md
.github/workflows/: release.yml  rust.yml
alternatives/: count-fasta-c.c  count_fasta_cnsg.pl
artifacts/: index.html
changelog/: index.html
changelog/v0.2.1/: index.html
changelog/v0.3.0/: index.html
changelog/v0.4.0/: index.html
changelog/v0.5.1/: index.html
changelog/v0.5.10/: index.html
changelog/v0.5.2/: index.html
changelog/v0.5.3/: index.html
changelog/v0.5.4/: index.html
changelog/v0.5.5/: index.html
changelog/v0.5.6/: index.html
changelog/v0.5.7/: index.html
changelog/v0.5.8/: index.html
changelog/v0.5.9/: index.html
changelog/v0.6.1/: index.html
changelog/v0.6.2/: index.html
changelog/v0.6.3/: index.html
changelog/v0.6.4/: index.html
changelog/v0.6.5/: index.html
changelog/v0.6.6/: index.html
changelog/v0.7.0/: index.html
changelog/v0.8.0/: index.html
changelog/v0.8.1/: index.html
changelog/v0.8.2/: index.html
changelog/v0.8.4/: index.html
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/examine_stable_20260322/: index.md  plan.md  report.md  spec.md
conductor/tracks/examine_stable_20260322/: metadata.json  plan.md
performance/: all_files_results.md  largest_file_results.md  thread_exploration.md
scripts/: benchmark.sh  coverage.sh  test_arm_simd.sh  test_simd_cross.sh
src/: main.rs  process_files.rs  simd.rs
test/: ay number 2.fna  ay number 2.naf  ay.fasta.xz  ay.fna.bgz  garbage_start.fa  mixed_case.fa  multi_line_seq.fa  multi_seq.fa  no.xz  test.csv  with_gaps.fa
tests/: comparison.rs
