[package]
name = "count-fasta-rs"
version = "0.6.3"
edition = "2024"
repository = "https://github.com/jovillarrealm/count-fasta-rs"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.profiling]
inherits = "release"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rayon = "1.8"
flate2 = "1.0.34"
zip = "2.2.0"
bytecount = "0.6.8"
xz2 = "0.1"
bzip2 = "0.5"
noodles = { version = "0.93.0", features = ["bgzf"] }
noodles-bgzf = "0.36.0"
noodles-core = "0.16.0"
num_cpus = "1.16.0"
