[package]
name = "count-fasta-rs"
version = "0.6.6"
edition = "2024"
repository = "https://github.com/jovillarrealm/count-fasta-rs"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.profiling]
inherits = "release"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = true
feature = "runtime-dispatch-simd"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rayon = "1.8"
flate2 = "1.0.34"
zip = "4.2.0"
bytecount = "0.6.8"
liblzma = "0.4.0"
bzip2 = "0.6"
noodles = { version = "0.99.0", features = ["bgzf"] }
noodles-bgzf = "0.41.0"
noodles-core = "0.17.0"
num_cpus = "1.16.0"

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]