[package]
name = "count-fasta-rs"
version = "0.8.1"
edition = "2024"
repository = "https://github.com/jovillarrealm/count-fasta-rs"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.profiling]
inherits = "release"
debug = true


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rayon = "1.8"
flate2 = "1.0.34"
zip = "8.1.0"
liblzma = "0.4.0"
bzip2 = "0.6"
noodles = { version = "0.105.0", features = ["bgzf"] }
num_cpus = "1.16.0"
nafcodec = "0.3.1"
memmap2 = "0.9"
memchr = "2.7.4"

[features]
default = []
